changed: added platformio support

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,8 @@
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
-platform_packages = 
-	framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#2.0.5
+#platform_packages = 
+#	framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#2.0.5
 build_flags = 
 	-DLV_LVGL_H_INCLUDE_SIMPLE
 	-DBOARD_HAS_PSRAM
@@ -22,9 +22,9 @@ build_flags =
 board_build.partitions = default_8MB.csv
 board_build.arduino.memory_type = qio_opi
 board_build.flash_size = 8MB
-board_build.psram_type = opi
+#board_build.psram_type = opi
 lib_deps = 
-	bodmer/TFT_eSPI@^2.5.23
+	bodmer/TFT_eSPI@^2.5.0
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.1
 	https://github.com/tzapu/WiFiManager.git
