--- a/platformio.ini
+++ b/platformio.ini
@@ -22,14 +22,15 @@ upload_speed = 921600
 
 # 2 x 4.5MB app, 6.875MB SPIFFS
 ;board_build.partitions = large_spiffs_16MB.csv
-board_build.partitions = default_8MB.csv
+;board_build.partitions = default_8MB.csv
+board_build.partitions = huge_app.csv
 ;board_build.partitions = default.csv
 	
 build_flags = 
 	-D LV_LVGL_H_INCLUDE_SIMPLE
 	-D BOARD_HAS_PSRAM
-	-D ARDUINO_USB_MODE=1
-	-D ARDUINO_USB_CDC_ON_BOOT=1
+	;-D ARDUINO_USB_MODE=1
+	;-D ARDUINO_USB_CDC_ON_BOOT=1
 	-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
