--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ framework = arduino
 monitor_filters = esp32_exception_decoder
 board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
-upload_speed = 921600
+upload_speed = 115200
 
 # 2 x 4.5MB app, 6.875MB SPIFFS
 ;board_build.partitions = large_spiffs_16MB.csv
@@ -29,9 +29,9 @@ board_build.partitions = huge_app.csv
 build_flags = 
 	-D LV_LVGL_H_INCLUDE_SIMPLE
 	-D BOARD_HAS_PSRAM
-	;-D ARDUINO_USB_MODE=1
-	;-D ARDUINO_USB_CDC_ON_BOOT=1
-	-D DEBUG_MINING=1
+	-D ARDUINO_USB_MODE=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+	;-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
