--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,8 @@ monitor_filters =
 	time
 board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
-upload_speed = 115200
+# decrease to 115200 if issues but wotks fine on my boards
+upload_speed = 512000 
 
 # 2 x 4.5MB app, 6.875MB SPIFFS
 ;board_build.partitions = large_spiffs_16MB.csv
@@ -34,6 +35,7 @@ build_flags =
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
 	;-D DEBUG_MINING=1
+	;-D FAN_CONTROL_PIN=13
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
