- Refactoring of the "configuration reset" button - Adding the possibility to rotate and turn the screen on and off

--- a/platformio.ini
+++ b/platformio.ini
@@ -38,3 +38,4 @@ lib_deps =
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
 	https://github.com/tzapu/WiFiManager.git
+	mathertel/OneButton @ ^2.0.3
