changed: modify variables to load json config. Comment submit to avoid error when it's a public pool.

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ framework = arduino
 monitor_filters = 
 	esp32_exception_decoder
 	time
+	log2file
 board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
 upload_speed = 115200
