NTP time funcitons added
- Get current time specifying offset (GMT)
- Update local time vars only every determined period

--- a/platformio.ini
+++ b/platformio.ini
@@ -40,3 +40,4 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.21.2
 	https://github.com/tzapu/WiFiManager.git
 	mathertel/OneButton @ ^2.0.3
+	arduino-libraries/NTPClient
