--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 globallib_dir = lib
-default_envs = NerminerV2 ;, ESP32-wrover, TTGO-T-Display
+default_envs =  ESP32-devKitv1 ; NerminerV2, TTGO-T-Display
 
 [env:NerminerV2]
 platform = espressif32
@@ -45,26 +45,27 @@ lib_deps =
 	https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
 
 
-[env:ESP32-wrover]
+[env:ESP32-devKitv1]
 platform = espressif32
-board = esp-wrover-kit
+board = esp32dev
 framework = arduino
 monitor_filters = 
 	esp32_exception_decoder
 	time
 	log2file
-board_build.arduino.memory_type = qio_opi
+;board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
 upload_speed = 115200
 
 # 2 x 4.5MB app, 6.875MB SPIFFS
 ;board_build.partitions = large_spiffs_16MB.csv
 ;board_build.partitions = default_8MB.csv
-board_build.partitions = huge_app.csv
-;board_build.partitions = default.csv
+;board_build.partitions = huge_app.csv
+board_build.partitions = default.csv
 	
-;build_flags = 
-;	-D ARDUINO_USB_MODE=1
+build_flags = 
+	-D ARDUINO_USB_MODE=1
+	-U FREERTOS
 	;-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
