--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 globallib_dir = lib
-default_envs =  ESP32-devKitv1 ; NerminerV2, TTGO-T-Display
+default_envs =   NerminerV2 ;, ESP32-devKitv1 TTGO-T-Display
 
 [env:NerminerV2]
 platform = espressif32
