Fix add delay pool connection + building on any ESP32
- Added a 5sec delay after not being able to connect with pool.
- Compile code to work on any ESP32 dev kit

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 globallib_dir = lib
-default_envs =   NerminerV2 ;, ESP32-devKitv1 TTGO-T-Display
+default_envs =   NerminerV2, ESP32-devKitv1; TTGO-T-Display
 
 [env:NerminerV2]
 platform = espressif32
@@ -42,7 +42,7 @@ lib_deps =
 	https://github.com/tzapu/WiFiManager.git
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
-	https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
 
 
 [env:ESP32-devKitv1]
@@ -60,12 +60,10 @@ upload_speed = 115200
 # 2 x 4.5MB app, 6.875MB SPIFFS
 ;board_build.partitions = large_spiffs_16MB.csv
 ;board_build.partitions = default_8MB.csv
-;board_build.partitions = huge_app.csv
-board_build.partitions = default.csv
+board_build.partitions = huge_app.csv
+;board_build.partitions = default.csv
 	
 build_flags = 
-	-D ARDUINO_USB_MODE=1
-	-U FREERTOS
 	;-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
@@ -73,11 +71,11 @@ lib_deps =
 	https://github.com/tzapu/WiFiManager.git
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
-	https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
 
 [env:TTGO-T-Display]
 platform = espressif32
-board = esp-wrover-kit
+board = esp32dev ;esp-wrover-kit
 framework = arduino
 monitor_filters = 
 	esp32_exception_decoder
@@ -92,7 +90,6 @@ upload_speed = 115200
 board_build.partitions = huge_app.csv
 	
 ;build_flags = 
-;	-D ARDUINO_USB_MODE=1
 	;-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
