--- a/platformio.ini
+++ b/platformio.ini
@@ -35,6 +35,7 @@ build_flags =
 	-D BOARD_HAS_PSRAM
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D NERDMINERV2=1
 	;-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
@@ -64,6 +65,7 @@ board_build.partitions = huge_app.csv
 ;board_build.partitions = default.csv
 	
 build_flags = 
+	-D DEVKITV1=1
 	;-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
@@ -89,8 +91,9 @@ upload_speed = 115200
 # 2 x 4.5MB app, 6.875MB SPIFFS
 board_build.partitions = huge_app.csv
 	
-;build_flags = 
+build_flags = 
 	;-D DEBUG_MINING=1
+	-D TDISPLAY=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
