--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [platformio]
 globallib_dir = lib
 default_envs =   NerminerV2, ESP32-devKitv1
+boards_dir = ./board
 
 [env:NerminerV2]
 platform = espressif32
@@ -98,3 +99,33 @@ lib_deps =
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+
+[env:T-QT-ESP32-S3]
+platform = espressif32
+board = esp32-s3-t-qt-pro
+framework = arduino
+monitor_filters = 
+	esp32_exception_decoder
+	time
+	log2file
+;board_build.arduino.memory_type = qio_opi
+monitor_speed = 115200
+upload_speed = 115200
+
+# 2 x 4.5MB app, 6.875MB SPIFFS
+;board_build.partitions = large_spiffs_16MB.csv
+;board_build.partitions = default_8MB.csv
+;board_build.partitions = huge_app.csv
+;board_build.partitions = default.csv
+	
+build_flags = 
+	-D BOARD_HAS_PSRAM
+	-D T_QT=1
+
+lib_deps = 
+	https://github.com/takkaO/OpenFontRender
+	bblanchon/ArduinoJson@^6.21.2
+	https://github.com/tzapu/WiFiManager.git
+	mathertel/OneButton @ ^2.0.3
+	arduino-libraries/NTPClient
+		
