--- a/platformio.ini
+++ b/platformio.ini
@@ -137,3 +137,26 @@ lib_deps =
 	arduino-libraries/NTPClient
 	https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
 	https://github.com/FastLED/FastLED
+
+[env:NerminerV2-T-QT]
+platform = espressif32
+board = esp32-s3-t-qt-pro
+framework = arduino
+monitor_filters = 
+	esp32_exception_decoder
+	time
+	log2file
+;board_build.arduino.memory_type = qio_opi
+monitor_speed = 115200
+upload_speed = 115200
+	
+build_flags = 
+	-DBOARD_HAS_PSRAM
+	-DNERMINER_T_QT=1
+
+lib_deps = 
+	https://github.com/takkaO/OpenFontRender
+	bblanchon/ArduinoJson@^6.21.2
+	https://github.com/tzapu/WiFiManager.git
+	mathertel/OneButton @ ^2.0.3
+	arduino-libraries/NTPClient
