Lilygo S3 T-Dongle fix after TFT driver upgrade. Board definition for Lilygo S3 AMOLED added.

--- a/platformio.ini
+++ b/platformio.ini
@@ -101,7 +101,7 @@ lib_deps =
 
 [env:NerminerV2-S3-AMOLED]
 platform = espressif32
-board = lilygo-t-display-s3
+board = lilygo-t-amoled
 framework = arduino
 
 board_build.partitions = huge_app.csv
