--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 globallib_dir = lib
-default_envs =   NerminerV2, ESP32-devKitv1
+default_envs =   NerdminerV2-Led, ESP32-devKitv1
 
 [env:NerminerV2]
 platform = espressif32
@@ -160,3 +160,24 @@ lib_deps =
 	https://github.com/tzapu/WiFiManager.git
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
+
+[env:NerdminerV2-Led]
+platform = espressif32
+board = ttgo-lora32-v1
+framework = arduino
+
+monitor_speed = 115200
+upload_speed = 115200
+
+board_build.partitions = huge_app.csv
+
+build_flags = 
+    -D NERDMINER_LED=1
+	-D DEBUG_MINING=1
+
+lib_deps = 
+	https://github.com/takkaO/OpenFontRender
+	bblanchon/ArduinoJson@^6.21.2
+	https://github.com/tzapu/WiFiManager.git
+	mathertel/OneButton @ ^2.0.3
+	https://github.com/arduino-libraries/NTPClient
