rename some files

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 globallib_dir = lib
-default_envs =   NerdminerV2-Led, ESP32-devKitv1
+default_envs =   NerdminerV2-T-Display_V1, ESP32-devKitv1
 
 [env:NerminerV2]
 platform = espressif32
@@ -161,7 +161,7 @@ lib_deps =
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 
-[env:NerdminerV2-Led]
+[env:NerdminerV2-T-Display_V1]
 platform = espressif32
 board = ttgo-lora32-v1
 framework = arduino
@@ -172,7 +172,7 @@ upload_speed = 115200
 board_build.partitions = huge_app.csv
 
 build_flags = 
-    -D NERDMINER_LED=1
+    -D NERDMINER_T_DISPLAY_V1=1
 	-D DEBUG_MINING=1
 
 lib_deps = 
