return default display

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 globallib_dir = lib
-default_envs =   NerdminerV2-T-Display_V1, ESP32-devKitv1
+default_envs =   NerminerV2, ESP32-devKitv1
 
 [env:NerminerV2]
 platform = espressif32
