--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 globallib_dir = lib
-default_envs =   NerminerV2, ESP32-devKitv1
+default_envs = NerminerV2, ESP32-devKitv1
 
 [env:NerminerV2]
 platform = espressif32
@@ -137,3 +137,27 @@ lib_deps =
 	arduino-libraries/NTPClient
 	https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
 	https://github.com/FastLED/FastLED
+
+[env:esp32cam]
+platform = espressif32
+board = esp32cam
+framework = arduino
+monitor_filters = 
+	esp32_exception_decoder
+	time
+	log2file
+board_build.arduino.memory_type = qio_opi
+monitor_speed = 115200
+upload_speed = 230400
+board_build.partitions = huge_app.csv
+build_flags = 
+	-D ESP32_CAM
+	-D MONITOR_SPEED=${this.monitor_speed}
+	;-D DEBUG_MINING=1
+lib_deps = 
+	bblanchon/ArduinoJson@^6.21.2
+	https://github.com/tzapu/WiFiManager.git
+	mathertel/OneButton @ ^2.0.3
+	arduino-libraries/NTPClient	
+;lib_ignore =
+	;TFT_eSPI
