Include boards Binaires

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 globallib_dir = lib
-default_envs =   NerminerV2, ESP32-devKitv1
+default_envs =   NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1
 
 [env:NerminerV2]
 platform = espressif32
