--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 globallib_dir = lib
-default_envs =   NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R
+default_envs =   ESP32-2432S028R ;NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R
 
 [env:NerminerV2]
 platform = espressif32
@@ -164,6 +164,7 @@ lib_deps =
 [env:ESP32-2432S028R]
 platform = espressif32
 board = esp32dev
+framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
 ;build_type = debug
@@ -197,7 +198,6 @@ lib_deps =
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	bodmer/TFT_eSPI @ ^2.5.31
-
 
 [env:NerdminerV2-T-Display_V1]
 platform = espressif32
