Fixed issue with public pool worker name and minor bugs

--- a/platformio.ini
+++ b/platformio.ini
@@ -172,6 +172,18 @@ build_flags =
 	-DSPI_FREQUENCY=55000000
 	-DSPI_READ_FREQUENCY=20000000
 	-DSPI_TOUCH_FREQUENCY=2500000
+	-DXPT2046=1
+	-DXPT2046_SPI_SCLK=25
+	-DXPT2046_SPI_MOSI=32
+	-DXPT2046_SPI_MISO=39
+	-DXPT2046_SPI_FREQ=2000000
+	-DXPT2046_PIN_INT=36
+	-DXPT2046_PIN_CS=33
+	; Calibration 240x320
+	-DXPT2046_MIN_X=349
+	-DXPT2046_MAX_X=3859
+	-DXPT2046_MIN_Y=247
+	-DXPT2046_MAX_Y=3871
 	
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
