--- a/platformio.ini
+++ b/platformio.ini
@@ -23,13 +23,11 @@ monitor_filters =
 board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
 upload_speed = 115200
-
 # 2 x 4.5MB app, 6.875MB SPIFFS
 ;board_build.partitions = large_spiffs_16MB.csv
 ;board_build.partitions = default_8MB.csv
 board_build.partitions = huge_app.csv
 ;board_build.partitions = default.csv
-	
 build_flags = 
 	-D LV_LVGL_H_INCLUDE_SIMPLE
 	-D BOARD_HAS_PSRAM
@@ -45,7 +43,6 @@ lib_deps =
 	arduino-libraries/NTPClient
 	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
 
-
 [env:ESP32-devKitv1]
 platform = espressif32
 board = esp32dev
@@ -57,10 +54,8 @@ monitor_filters =
 ;board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
 upload_speed = 115200
-
 # 2 x 4.5MB app, 6.875MB SPIFFS
 board_build.partitions = huge_app.csv
-	
 build_flags = 
 	-D DEVKITV1=1
 	;-D DEBUG_MINING=1
@@ -70,7 +65,6 @@ lib_deps =
 	https://github.com/tzapu/WiFiManager.git
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
-
 
 [env:TTGO-T-Display]
 platform = espressif32
@@ -83,11 +77,8 @@ monitor_filters =
 board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
 upload_speed = 115200
-
-
 # 2 x 4.5MB app, 6.875MB SPIFFS
 board_build.partitions = huge_app.csv
-	
 build_flags = 
 	;-D DEBUG_MINING=1
 	-D TDISPLAY=1
@@ -103,9 +94,7 @@ lib_deps =
 platform = espressif32
 board = lilygo-t-display-s3
 framework = arduino
-
 board_build.partitions = huge_app.csv
-
 build_flags = 
     -DNERMINER_S3_AMOLED
     -DBOARD_HAS_PSRAM
@@ -116,15 +105,13 @@ lib_deps =
 	https://github.com/tzapu/WiFiManager.git
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
-	https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
 
 [env:NerminerV2-S3-DONGLE]
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
-
 board_build.partitions = huge_app.csv
-
 build_flags = 
     -DNERMINER_S3_DONGLE
     -DBOARD_HAS_PSRAM
@@ -135,11 +122,11 @@ lib_deps =
 	https://github.com/tzapu/WiFiManager.git
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
-	https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
 	https://github.com/FastLED/FastLED
+	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
 
 [env:esp32cam]
-platform = espressif32
+platform = espressif32 ;(ESP32-D0WD-V3)
 board = esp32cam
 framework = arduino
 monitor_filters = 
@@ -147,10 +134,10 @@ monitor_filters =
 	time
 	log2file
 monitor_speed = 115200
-upload_speed = 230400
+upload_speed = 921600
 board_build.partitions = huge_app.csv
 build_flags = 
-	-D ESP32_CAM=1
+	-D ESP32_CAM
 	-D MONITOR_SPEED=${this.monitor_speed}
 lib_deps = 
 	bblanchon/ArduinoJson@^6.21.2
