Touch changing screens

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-globallib_dir = lib
-default_envs =   NerminerV2, ESP32-devKitv1
+globallib_dir = C:\Users\nitro\AppData\Local\Programs\Microsoft VS Code\lib
+default_envs = 
+	NerminerV2
+	ESP32-devKitv1
 
 [env:NerminerV2]
 platform = espressif32
@@ -23,28 +25,19 @@ monitor_filters =
 board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
 upload_speed = 115200
-
-# 2 x 4.5MB app, 6.875MB SPIFFS
-;board_build.partitions = large_spiffs_16MB.csv
-;board_build.partitions = default_8MB.csv
 board_build.partitions = huge_app.csv
-;board_build.partitions = default.csv
-	
 build_flags = 
 	-D LV_LVGL_H_INCLUDE_SIMPLE
 	-D BOARD_HAS_PSRAM
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
 	-D NERDMINERV2=1
-	;-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
 	https://github.com/tzapu/WiFiManager.git
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
-	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
-
 
 [env:ESP32-devKitv1]
 platform = espressif32
@@ -54,16 +47,10 @@ monitor_filters =
 	esp32_exception_decoder
 	time
 	log2file
-;board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
 upload_speed = 115200
-
-# 2 x 4.5MB app, 6.875MB SPIFFS
 board_build.partitions = huge_app.csv
-	
-build_flags = 
-	-D DEVKITV1=1
-	;-D DEBUG_MINING=1
+build_flags = -D DEVKITV1=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
@@ -71,10 +58,9 @@ lib_deps =
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 
-
 [env:TTGO-T-Display]
 platform = espressif32
-board = esp32dev ;esp-wrover-kit
+board = esp32dev
 framework = arduino
 monitor_filters = 
 	esp32_exception_decoder
@@ -83,33 +69,24 @@ monitor_filters =
 board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
 upload_speed = 115200
-
-
-# 2 x 4.5MB app, 6.875MB SPIFFS
 board_build.partitions = huge_app.csv
-	
-build_flags = 
-	;-D DEBUG_MINING=1
-	-D TDISPLAY=1
+build_flags = -D TDISPLAY=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
 	https://github.com/tzapu/WiFiManager.git
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
-	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
 
 [env:NerminerV2-S3-AMOLED]
 platform = espressif32
 board = lilygo-t-display-s3
 framework = arduino
-
 board_build.partitions = huge_app.csv
-
 build_flags = 
-    -DNERMINER_S3_AMOLED
-    -DBOARD_HAS_PSRAM
-    -DARDUINO_USB_CDC_ON_BOOT
+	-DNERMINER_S3_AMOLED
+	-DBOARD_HAS_PSRAM
+	-DARDUINO_USB_CDC_ON_BOOT
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
@@ -122,13 +99,11 @@ lib_deps =
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
-
 board_build.partitions = huge_app.csv
-
 build_flags = 
-    -DNERMINER_S3_DONGLE
-    -DBOARD_HAS_PSRAM
-    -DARDUINO_USB_CDC_ON_BOOT
+	-DNERMINER_S3_DONGLE
+	-DBOARD_HAS_PSRAM
+	-DARDUINO_USB_CDC_ON_BOOT
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
@@ -148,10 +123,9 @@ monitor_filters =
 	log2file
 monitor_speed = 115200
 upload_speed = 921600
-;build_type = debug
 board_build.partitions = huge_app.csv
 build_flags = 
-	-D ESP32_2432S028R=1
+	-DESP32_2432S028R=1
 	-DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 	-DUSER_SETUP_LOADED=1
 	-DILI9341_2_DRIVER=1
@@ -164,7 +138,12 @@ build_flags =
 	-DTFT_DC=2
 	-DTFT_RST=12
 	-DTFT_BL=21
-	-DTOUCH_CS=33
+	-DETOUCH_CS=33
+	-DTOUCH_CLK=25
+	-DTOUCH_MISO=39
+	-DTOUCH_MOSI=32
+	-DTOUCH_IRQ=36
+	-DSOFTSPI=1
 	-DLOAD_GLCD=1
 	-DLOAD_FONT2=1
 	-DLOAD_GFXFF=1
@@ -172,19 +151,6 @@ build_flags =
 	-DSPI_FREQUENCY=55000000
 	-DSPI_READ_FREQUENCY=20000000
 	-DSPI_TOUCH_FREQUENCY=2500000
-	-DXPT2046=1
-	-DXPT2046_SPI_SCLK=25
-	-DXPT2046_SPI_MOSI=32
-	-DXPT2046_SPI_MISO=39
-	-DXPT2046_SPI_FREQ=2000000
-	-DXPT2046_PIN_INT=36
-	-DXPT2046_PIN_CS=33
-	; Calibration 240x320
-	-DXPT2046_MIN_X=349
-	-DXPT2046_MAX_X=3859
-	-DXPT2046_MIN_Y=247
-	-DXPT2046_MAX_Y=3871
-	
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
@@ -192,3 +158,4 @@ lib_deps =
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	bodmer/TFT_eSPI @ ^2.5.31
+	https://github.com/achillhasler/TFT_eTouch
