--- a/platformio.ini
+++ b/platformio.ini
@@ -9,10 +9,8 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-globallib_dir = C:\Users\nitro\AppData\Local\Programs\Microsoft VS Code\lib
-default_envs = 
-	NerminerV2
-	ESP32-devKitv1
+globallib_dir = lib
+default_envs = NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R
 
 [env:NerminerV2]
 platform = espressif32
@@ -25,19 +23,28 @@ monitor_filters =
 board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
 upload_speed = 115200
+
+# 2 x 4.5MB app, 6.875MB SPIFFS
+;board_build.partitions = large_spiffs_16MB.csv
+;board_build.partitions = default_8MB.csv
 board_build.partitions = huge_app.csv
+;board_build.partitions = default.csv
+	
 build_flags = 
 	-D LV_LVGL_H_INCLUDE_SIMPLE
 	-D BOARD_HAS_PSRAM
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
 	-D NERDMINERV2=1
+	;-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
 	https://github.com/tzapu/WiFiManager.git
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
+	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+
 
 [env:ESP32-devKitv1]
 platform = espressif32
@@ -47,10 +54,16 @@ monitor_filters =
 	esp32_exception_decoder
 	time
 	log2file
+;board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
 upload_speed = 115200
+
+# 2 x 4.5MB app, 6.875MB SPIFFS
 board_build.partitions = huge_app.csv
-build_flags = -D DEVKITV1=1
+	
+build_flags = 
+	-D DEVKITV1=1
+	;-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
@@ -58,9 +71,10 @@ lib_deps =
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 
+
 [env:TTGO-T-Display]
 platform = espressif32
-board = esp32dev
+board = esp32dev ;esp-wrover-kit
 framework = arduino
 monitor_filters = 
 	esp32_exception_decoder
@@ -69,24 +83,33 @@ monitor_filters =
 board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
 upload_speed = 115200
+
+
+# 2 x 4.5MB app, 6.875MB SPIFFS
 board_build.partitions = huge_app.csv
-build_flags = -D TDISPLAY=1
+	
+build_flags = 
+	;-D DEBUG_MINING=1
+	-D TDISPLAY=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
 	https://github.com/tzapu/WiFiManager.git
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
+	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
 
 [env:NerminerV2-S3-AMOLED]
 platform = espressif32
-board = lilygo-t-display-s3
+board = lilygo-t-amoled
 framework = arduino
+
 board_build.partitions = huge_app.csv
+
 build_flags = 
-	-DNERMINER_S3_AMOLED
-	-DBOARD_HAS_PSRAM
-	-DARDUINO_USB_CDC_ON_BOOT
+    -DNERMINER_S3_AMOLED
+    -DBOARD_HAS_PSRAM
+    -DARDUINO_USB_CDC_ON_BOOT
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
@@ -99,11 +122,13 @@ lib_deps =
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
+
 board_build.partitions = huge_app.csv
+
 build_flags = 
-	-DNERMINER_S3_DONGLE
-	-DBOARD_HAS_PSRAM
-	-DARDUINO_USB_CDC_ON_BOOT
+    -DNERMINER_S3_DONGLE
+    -DBOARD_HAS_PSRAM
+    -DARDUINO_USB_CDC_ON_BOOT
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
@@ -112,6 +137,29 @@ lib_deps =
 	arduino-libraries/NTPClient
 	https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
 	https://github.com/FastLED/FastLED
+
+[env:NerminerV2-T-QT]
+platform = espressif32
+board = esp32-s3-t-qt-pro
+framework = arduino
+monitor_filters = 
+	esp32_exception_decoder
+	time
+	log2file
+;board_build.arduino.memory_type = qio_opi
+monitor_speed = 115200
+upload_speed = 115200
+	
+build_flags = 
+	-D BOARD_HAS_PSRAM
+	-D NERMINER_T_QT=1
+
+lib_deps = 
+	https://github.com/takkaO/OpenFontRender
+	bblanchon/ArduinoJson@^6.21.2
+	https://github.com/tzapu/WiFiManager.git
+	mathertel/OneButton @ ^2.0.3
+	arduino-libraries/NTPClient
 
 [env:ESP32-2432S028R]
 platform = espressif32
@@ -159,3 +207,25 @@ lib_deps =
 	arduino-libraries/NTPClient
 	bodmer/TFT_eSPI @ ^2.5.31
 	https://github.com/achillhasler/TFT_eTouch
+
+[env:NerdminerV2-T-Display_V1]
+platform = espressif32
+board = ttgo-lora32-v1
+framework = arduino
+
+monitor_speed = 115200
+upload_speed = 115200
+
+board_build.partitions = huge_app.csv
+
+build_flags = 
+    -D NERDMINER_T_DISPLAY_V1=1
+	-D DEBUG_MINING=1
+
+lib_deps = 
+	https://github.com/takkaO/OpenFontRender
+	bblanchon/ArduinoJson@^6.21.2
+	https://github.com/tzapu/WiFiManager.git
+	mathertel/OneButton @ ^2.0.3
+	https://github.com/arduino-libraries/NTPClient
+
