Touch, Sprites fix to small heap, Suffix adj.

--- a/platformio.ini
+++ b/platformio.ini
@@ -170,8 +170,8 @@ upload_speed = 921600
 ;build_type = debug
 board_build.partitions = huge_app.csv
 build_flags = 
-	-D ESP32_2432S028R=1
-	-DCORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
+	;-DDEBUG_MEMORY=1
+	-D ESP32_2432S028R=1	
 	-DUSER_SETUP_LOADED=1
 	-DILI9341_2_DRIVER=1
 	-DTFT_WIDTH=240
@@ -183,7 +183,11 @@ build_flags =
 	-DTFT_DC=2
 	-DTFT_RST=12
 	-DTFT_BL=21
-	-DTOUCH_CS=33
+	-DETOUCH_CS=33
+	-DTOUCH_CLK=25
+	-DTOUCH_MISO=39
+	-DTOUCH_MOSI=32
+	-DTOUCH_IRQ=36
 	-DLOAD_GLCD=1
 	-DLOAD_FONT2=1
 	-DLOAD_GFXFF=1
@@ -198,6 +202,7 @@ lib_deps =
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	bodmer/TFT_eSPI @ ^2.5.31
+	https://github.com/achillhasler/TFT_eTouch
 
 [env:NerdminerV2-T-Display_V1]
 platform = espressif32
