add version (fix build error), improve readability

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 globallib_dir = lib
 default_envs = esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R
 
+;--------------------------------------------------------------------
+
 [env:NerminerV2]
 platform = espressif32
 board = esp32-s3-devkitc-1
@@ -38,10 +40,12 @@ build_flags =
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+
+;--------------------------------------------------------------------
 
 [env:ESP32-devKitv1]
 platform = espressif32
@@ -62,9 +66,11 @@ build_flags =
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
+
+;--------------------------------------------------------------------
 
 [env:TTGO-T-Display]
 platform = espressif32
@@ -85,10 +91,12 @@ build_flags =
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+
+;--------------------------------------------------------------------
 
 [env:NerminerV2-S3-AMOLED]
 platform = espressif32
@@ -102,10 +110,12 @@ build_flags =
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+
+;--------------------------------------------------------------------
 
 [env:NerminerV2-S3-DONGLE]
 platform = espressif32
@@ -119,11 +129,13 @@ build_flags =
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	https://github.com/FastLED/FastLED
 	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+
+;--------------------------------------------------------------------
 
 [env:esp32cam]
 platform = espressif32 ;(ESP32-D0WD-V3)
@@ -136,17 +148,22 @@ monitor_filters =
 monitor_speed = 115200
 upload_speed = 921600
 board_build.partitions = huge_app.csv
+board_build.arduino.memory_type = dio_qspi
 build_flags = 
 	-D ESP32_CAM
+	-D BOARD_HAS_PSRAM
 	-D MONITOR_SPEED=${this.monitor_speed}
+	;-D DEBUG_MINING
+	;-D DEBUG_MEMORY
 lib_deps = 
-	;https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 lib_ignore =
 	TFT_eSPI
+
+;--------------------------------------------------------------------
 
 [env:NerminerV2-T-QT]
 platform = espressif32
@@ -167,10 +184,12 @@ build_flags =
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
-  
+
+;--------------------------------------------------------------------
+
 [env:ESP32-2432S028R]
 platform = espressif32
 board = esp32dev
@@ -204,10 +223,12 @@ build_flags =
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	bodmer/TFT_eSPI @ ^2.5.31
+
+;--------------------------------------------------------------------
 
 [env:NerdminerV2-T-Display_V1]
 platform = espressif32
@@ -226,7 +247,6 @@ build_flags =
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	https://github.com/arduino-libraries/NTPClient
-
