add display to esp32cam

--- a/platformio.ini
+++ b/platformio.ini
@@ -160,8 +160,9 @@ lib_deps =
 	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
+	https://github.com/takkaO/OpenFontRender
 lib_ignore =
-	TFT_eSPI
+	;TFT_eSPI
 
 ;--------------------------------------------------------------------
 
