--- a/platformio.ini
+++ b/platformio.ini
@@ -126,6 +126,8 @@ build_flags =
     -DNERMINER_S3_DONGLE
     -DBOARD_HAS_PSRAM
     -DARDUINO_USB_CDC_ON_BOOT
+    -DTFT_BACKLIGHT_ON=HIGH
+    -DTFT_BL=38
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
