--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,37 @@
 
 [platformio]
 globallib_dir = lib
-default_envs = NerminerV2 ; esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3
+default_envs = NerminerV2 ; esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1
 
+[env:ESP32-S3-devKitv1]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+monitor_filters = 
+	esp32_exception_decoder
+	time
+	log2file
+board_build.arduino.memory_type = qio_opi
+monitor_speed = 115200
+upload_speed = 115200
+board_build.partitions = huge_app.csv
+build_flags = 
+	-D BOARD_HAS_PSRAM
+	-D ARDUINO_USB_MODE=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D DEVKITV1RGB=1
+	;-D DEBUG_MINING=1
+lib_deps = 
+	https://github.com/takkaO/OpenFontRender
+	bblanchon/ArduinoJson@^6.21.2
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
+	mathertel/OneButton @ ^2.0.3
+	arduino-libraries/NTPClient
+	https://github.com/FastLED/FastLED
+lib_ignore =
+	TFT_eSPI
+
+;--------------------------------------------------------------------
 
 
 [env:NerminerV2]
