fix format and allow buildings of all boards

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,9 @@
 
 [platformio]
 globallib_dir = lib
-default_envs = NerminerV2 ; esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1
+default_envs = esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1
+
+;--------------------------------------------------------------------
 
 [env:ESP32-S3-devKitv1]
 platform = espressif32
@@ -41,7 +43,6 @@ lib_ignore =
 	TFT_eSPI
 
 ;--------------------------------------------------------------------
-
 
 [env:NerminerV2]
 platform = espressif32
@@ -287,6 +288,8 @@ lib_deps =
 	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	https://github.com/arduino-libraries/NTPClient
+
+;--------------------------------------------------------------------
 
 [env:M5-StampS3]
 platform = espressif32
