--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 globallib_dir = lib
-default_envs = esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S3-mini-weact
+default_envs = esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S3-mini-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
 
 
 ;--------------------------------------------------------------------
@@ -31,7 +31,8 @@ build_flags =
 	-D BOARD_HAS_PSRAM
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
-	-D S3MINIWEMOS=1
+	-D ESP32RGB=1
+	-D RGB_LED_PIN=47
 	;-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
@@ -42,7 +43,6 @@ lib_deps =
 	https://github.com/FastLED/FastLED
 lib_ignore =
 	TFT_eSPI
-;--------------------------------------------------------------------
 
 ;--------------------------------------------------------------------
 
@@ -62,7 +62,8 @@ build_flags =
 	-D BOARD_HAS_PSRAM
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
-	-D S3MINIWEACT=1
+	-D ESP32RGB=1
+	-D RGB_LED_PIN=48
 	;-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
@@ -73,6 +74,65 @@ lib_deps =
 	https://github.com/FastLED/FastLED
 lib_ignore =
 	TFT_eSPI
+;--------------------------------------------------------------------
+
+[env:ESP32-C3-super-mini]
+platform = espressif32
+board = seeed_xiao_esp32c3
+framework = arduino
+monitor_filters = 
+	esp32_exception_decoder
+	time
+	log2file
+monitor_speed = 115200
+upload_speed = 115200
+board_build.partitions = huge_app.csv
+build_flags = 
+	-D BOARD_HAS_PSRAM
+	-D ARDUINO_USB_MODE=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D DEVKITV1=1
+	-D PIN_BUTTON_1=9
+	;-D DEBUG_MINING=1
+lib_deps = 
+	https://github.com/takkaO/OpenFontRender
+	bblanchon/ArduinoJson@^6.21.2
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
+	mathertel/OneButton @ ^2.0.3
+	arduino-libraries/NTPClient
+lib_ignore =
+	TFT_eSPI
+;--------------------------------------------------------------------
+
+[env:ESP32-C3-devKitmv1]
+platform = espressif32
+board = esp32-c3-devkitm-1
+framework = arduino
+monitor_filters = 
+	esp32_exception_decoder
+	time
+	log2file
+monitor_speed = 115200
+upload_speed = 115200
+board_build.partitions = huge_app.csv
+build_flags = 
+	-D BOARD_HAS_PSRAM
+	-D ARDUINO_USB_MODE=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D ESP32RGB=1
+	-D PIN_BUTTON_1=9
+	-D RGB_LED_PIN=8
+	;-D DEBUG_MINING=1
+lib_deps = 
+	https://github.com/takkaO/OpenFontRender
+	bblanchon/ArduinoJson@^6.21.2
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
+	mathertel/OneButton @ ^2.0.3
+	arduino-libraries/NTPClient
+	https://github.com/FastLED/FastLED
+lib_ignore =
+	TFT_eSPI
+
 ;--------------------------------------------------------------------
 
 [env:ESP32-S3-devKitv1]
@@ -91,7 +151,8 @@ build_flags =
 	-D BOARD_HAS_PSRAM
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
-	-D DEVKITV1RGB=1
+	-D ESP32RGB=1
+	-D RGB_LED_PIN=48
 	;-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
