--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,7 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+; test
 
 [platformio]
 globallib_dir = lib
