--- a/platformio.ini
+++ b/platformio.ini
@@ -7,7 +7,7 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-; test
+; tes
 
 [platformio]
 globallib_dir = lib
