M5StickC support added

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,104 +7,11 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-; tes
 
 [platformio]
 globallib_dir = lib
-default_envs = esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S3-mini-weact
+default_envs = M5Stick-C ; M5Stick-C, esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3
 
-
-;--------------------------------------------------------------------
-
-[env:ESP32-S3-mini-wemos]
-platform = espressif32
-board = lolin_s3_mini
-framework = arduino
-monitor_filters = 
-	esp32_exception_decoder
-	time
-	log2file
-board_build.arduino.memory_type = qio_opi
-monitor_speed = 115200
-upload_speed = 115200
-board_build.partitions = huge_app.csv
-build_flags = 
-	-D BOARD_HAS_PSRAM
-	-D ARDUINO_USB_MODE=1
-	-D ARDUINO_USB_CDC_ON_BOOT=1
-	-D S3MINIWEMOS=1
-	;-D DEBUG_MINING=1
-lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	https://github.com/FastLED/FastLED
-lib_ignore =
-	TFT_eSPI
-;--------------------------------------------------------------------
-
-;--------------------------------------------------------------------
-
-[env:ESP32-S3-mini-weact]
-platform = espressif32
-board = lolin_s3_mini
-framework = arduino
-monitor_filters = 
-	esp32_exception_decoder
-	time
-	log2file
-board_build.arduino.memory_type = qio_opi
-monitor_speed = 115200
-upload_speed = 115200
-board_build.partitions = huge_app.csv
-build_flags = 
-	-D BOARD_HAS_PSRAM
-	-D ARDUINO_USB_MODE=1
-	-D ARDUINO_USB_CDC_ON_BOOT=1
-	-D S3MINIWEACT=1
-	;-D DEBUG_MINING=1
-lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	https://github.com/FastLED/FastLED
-lib_ignore =
-	TFT_eSPI
-;--------------------------------------------------------------------
-
-[env:ESP32-S3-devKitv1]
-platform = espressif32
-board = esp32-s3-devkitc-1
-framework = arduino
-monitor_filters = 
-	esp32_exception_decoder
-	time
-	log2file
-board_build.arduino.memory_type = qio_opi
-monitor_speed = 115200
-upload_speed = 115200
-board_build.partitions = huge_app.csv
-build_flags = 
-	-D BOARD_HAS_PSRAM
-	-D ARDUINO_USB_MODE=1
-	-D ARDUINO_USB_CDC_ON_BOOT=1
-	-D DEVKITV1RGB=1
-	;-D DEBUG_MINING=1
-lib_deps = 
-	https://github.com/takkaO/OpenFontRender
-	bblanchon/ArduinoJson@^6.21.2
-	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
-	mathertel/OneButton @ ^2.0.3
-	arduino-libraries/NTPClient
-	https://github.com/FastLED/FastLED
-lib_ignore =
-	TFT_eSPI
-
-;--------------------------------------------------------------------
 
 [env:NerminerV2]
 platform = espressif32
@@ -149,7 +56,7 @@ monitor_filters =
 	log2file
 ;board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
-upload_speed = 115200
+upload_speed = 1500000 ; 921600 460800
 # 2 x 4.5MB app, 6.875MB SPIFFS
 board_build.partitions = huge_app.csv
 build_flags = 
@@ -161,6 +68,35 @@ lib_deps =
 	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
+
+;--------------------------------------------------------------------
+
+[env:M5Stick-C]
+platform = espressif32
+board = m5stick-c
+framework = arduino
+monitor_filters = 
+	esp32_exception_decoder
+	time
+	log2file
+;board_build.arduino.memory_type = qio_opi
+monitor_speed = 115200
+upload_speed = 1500000
+# 2 x 4.5MB app, 6.875MB SPIFFS
+board_build.partitions = huge_app.csv
+build_flags = 
+	-D M5STICK_C=1
+	;-D DEBUG_MINING=1
+lib_deps = 
+	https://github.com/takkaO/OpenFontRender
+	bblanchon/ArduinoJson@^6.21.2
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
+	mathertel/OneButton @ ^2.0.3
+	arduino-libraries/NTPClient
+	M5StickC
+	Wire
+lib_ignore =
+	TFT_eSPI
 
 ;--------------------------------------------------------------------
 
@@ -350,8 +286,6 @@ lib_deps =
 	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	https://github.com/arduino-libraries/NTPClient
-
-;--------------------------------------------------------------------
 
 [env:M5-StampS3]
 platform = espressif32
