M5StickC support added

--- a/platformio.ini
+++ b/platformio.ini
@@ -174,7 +174,7 @@ monitor_filters =
 	log2file
 ;board_build.arduino.memory_type = qio_opi
 monitor_speed = 115200
-upload_speed = 1500000 ; 921600 460800
+upload_speed = 115200
 # 2 x 4.5MB app, 6.875MB SPIFFS
 board_build.partitions = huge_app.csv
 build_flags = 
