--- a/platformio.ini
+++ b/platformio.ini
@@ -93,6 +93,7 @@ build_flags =
 	-D ARDUINO_USB_CDC_ON_BOOT=1
 	-D DEVKITV1=1
 	-D PIN_BUTTON_1=9
+	-D LED_PIN=8
 	;-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
