Cleaned up libs

--- a/platformio.ini
+++ b/platformio.ini
@@ -7,10 +7,11 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+; M5Stick-C, esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S3-mini-weact
 
 [platformio]
 globallib_dir = lib
-default_envs = M5Stick-C, esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S3-mini-weact
+default_envs = M5Stick-C
 
 [env:M5Stick-C]
 platform = espressif32
@@ -29,16 +30,17 @@ build_flags =
 	-D M5STICK_C=1
 	;-D DEBUG_MINING=1
 lib_deps = 
-	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
 	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	M5StickC
-	Wire
 lib_ignore =
 	TFT_eSPI
-
+	SD
+	SD_MMC
+	rm67162
+	
 ;--------------------------------------------------------------------
 
 [env:ESP32-S3-mini-wemos]
