Add support Lilygo T-Embed board

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 globallib_dir = lib
-default_envs = M5Stick-C, esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S3-mini-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
+default_envs = M5Stick-C, esp32cam, ESP32-2432S028R, NerminerV2, Lilygo-T-Embed, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S3-mini-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
 
 [env:M5Stick-C]
 platform = espressif32
@@ -215,6 +215,39 @@ build_flags =
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
 	-D NERDMINERV2=1
+	;-D DEBUG_MINING=1
+lib_deps = 
+	https://github.com/takkaO/OpenFontRender
+	bblanchon/ArduinoJson@^6.21.2
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
+	mathertel/OneButton @ ^2.0.3
+	arduino-libraries/NTPClient
+	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+
+;--------------------------------------------------------------------
+
+[env:Lilygo-T-Embed]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+monitor_filters = 
+	esp32_exception_decoder
+	time
+	log2file
+board_build.arduino.memory_type = qio_opi
+monitor_speed = 115200
+upload_speed = 115200
+# 2 x 4.5MB app, 6.875MB SPIFFS
+;board_build.partitions = large_spiffs_16MB.csv
+;board_build.partitions = default_8MB.csv
+board_build.partitions = huge_app.csv
+;board_build.partitions = default.csv
+build_flags = 
+	-D LV_LVGL_H_INCLUDE_SIMPLE
+	-D BOARD_HAS_PSRAM
+	-D ARDUINO_USB_MODE=1
+	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D LILYGO_S3_T_EMBED=1
 	;-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
