--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [platformio]
 globallib_dir = lib
-default_envs = M5Stick-C, esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S3-mini-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
+default_envs = NerdminerV2-T-HMI, M5Stick-C, esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S3-mini-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
 
 [env:M5Stick-C]
 platform = espressif32
@@ -438,7 +438,47 @@ lib_deps =
 	mathertel/OneButton @ ^2.0.3
 	https://github.com/arduino-libraries/NTPClient
 
+
 ;--------------------------------------------------------------------
+
+[env:NerdminerV2-T-HMI]
+platform = espressif32
+board = lilygo-t-hmi
+framework = arduino
+board_build.partitions = default_16MB.csv
+monitor_filters =
+	esp32_exception_decoder
+	time
+	log2file
+
+monitor_speed = 115200
+upload_speed = 921600
+upload_port = /dev/ttyACM0
+
+build_flags =
+	-D ARDUINO_USB_MODE=1
+    -D ARDUINO_USB_CDC_ON_BOOT=1
+    -D BOARD_HAS_PSRAM
+	-D NERDMINER_T_HMI=1
+;   -D USER_SETUP_LOADED=1
+;	-D DEBUG_MINING=1
+;	-D DEBUG_MEMORY=1
+    -D USER_SETUP_LOADED=1
+    -include $PROJECT_LIBDEPS_DIR/$PIOENV/TFT_eSPI/User_Setups/Setup207_LilyGo_T_HMI.h
+
+board_build.arduino.memory_type = qio_opi
+lib_deps =
+	https://github.com/takkaO/OpenFontRender
+	bblanchon/ArduinoJson@^6.21.2
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
+	mathertel/OneButton @ ^2.0.3
+	arduino-libraries/NTPClient
+    bodmer/TFT_eSPI @ ^2.5.31
+    ; https://github.com/lbuque/TFT_eSPI.git
+	https://github.com/achillhasler/TFT_eTouch
+
+;--------------------------------------------------------------------
+
 
 [env:M5-StampS3]
 platform = espressif32
