--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [platformio]
 globallib_dir = lib
 
-default_envs = M5Stick-C, esp32cam, ESP32-2432S028R, ESP32_2432S028_2USB, NerminerV2, Lilygo-T-Embed, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S2-mini-wemos, ESP32-S3-mini-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
+default_envs = M5Stick-C, esp32cam, ESP32-2432S028R, ESP32_2432S028_2USB, NerminerV2, Lilygo-T-Embed, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S2-mini-wemos, ESP32-S3-mini-weact, ESP32-D0WD-V3-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
 
 
 [env:M5Stick-C]
@@ -132,6 +132,34 @@ lib_deps =
 	https://github.com/FastLED/FastLED
 lib_ignore =
 	TFT_eSPI
+
+
+;--------------------------------------------------------------------
+
+[env:ESP32-D0WD-V3-weact]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_filters = 
+    esp32_exception_decoder
+    time
+    log2file
+monitor_speed = 115200
+upload_speed = 115200
+board_build.partitions = huge_app.csv
+build_flags = 
+    -D DEVKITV1=1
+    -D PIN_BUTTON_1=0
+    -D LED_PIN=22
+    ;-D DEBUG_MINING=1
+lib_deps = 
+    https://github.com/takkaO/OpenFontRender
+    bblanchon/ArduinoJson@^6.21.2
+    https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
+    mathertel/OneButton @ ^2.0.3
+    arduino-libraries/NTPClient
+lib_ignore =
+    TFT_eSPI
 ;--------------------------------------------------------------------
 
 [env:ESP32-C3-super-mini]
@@ -146,7 +174,6 @@ monitor_speed = 115200
 upload_speed = 115200
 board_build.partitions = huge_app.csv
 build_flags = 
-	-D BOARD_HAS_PSRAM
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
 	-D DEVKITV1=1
@@ -175,7 +202,6 @@ monitor_speed = 115200
 upload_speed = 115200
 board_build.partitions = huge_app.csv
 build_flags = 
-	-D BOARD_HAS_PSRAM
 	-D ARDUINO_USB_MODE=1
 	-D ARDUINO_USB_CDC_ON_BOOT=1
 	-D ESP32RGB=1
