feat : disable/enable led on no display board

--- a/platformio.ini
+++ b/platformio.ini
@@ -120,6 +120,8 @@ build_flags =
 	-D DEVKITV1=1
 	-D PIN_BUTTON_1=0
 	-D LED_PIN=22
+	-D ACTIVE_LED=LOW
+	-D INACTIVE_LED=HIGH
 	;-D DEBUG_MINING=1
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
