feat : disable/enable led on no display board

--- a/platformio.ini
+++ b/platformio.ini
@@ -151,7 +151,8 @@ build_flags =
     -D DEVKITV1=1
     -D PIN_BUTTON_1=0
     -D LED_PIN=22
-    ;-D DEBUG_MINING=1
+    -D ACTIVE_LED=LOW
+    -D INACTIVE_LED=HIGH
 lib_deps = 
     https://github.com/takkaO/OpenFontRender
     bblanchon/ArduinoJson@^6.21.2
