--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [platformio]
 globallib_dir = lib
 
-default_envs = M5Stick-C, esp32cam, ESP32-2432S028R, ESP32_2432S028_2USB, NerminerV2, Lilygo-T-Embed, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S3-mini-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
+default_envs = M5Stick-C, esp32cam, ESP32-2432S028R, ESP32-2432S028-2USB, NerminerV2, Lilygo-T-Embed, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S3-mini-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
 
 
 [env:M5Stick-C]
@@ -408,11 +408,10 @@ lib_deps =
 
  ;--------------------------------------------------------------------
 
-; This env is just for another type of the popular ESP32_2432S028 which need different settings than others
-; like TFT inversion
-; and different gamma settings
+; This env is just for another type of the popular ESP32_2432S028 which need
+; different settings than others like TFT inversion and different gamma settings
 
-[env:ESP32_2432S028_2USB]
+[env:ESP32-2432S028-2USB]
 platform = espressif32
 board = esp32dev
 framework = arduino
@@ -422,7 +421,7 @@ upload_speed = 921600
 board_build.partitions = huge_app.csv
 build_flags = 
 	;-DDEBUG_MEMORY=1
-	-D ESP32_2432S028_2USB=1
+	-DESP32_2432S028_2USB=1
 	-DTFT_INVERSION_ON
 	-DUSER_SETUP_LOADED=1
 	-DILI9341_2_DRIVER=1
