--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [platformio]
 globallib_dir = lib
 
-default_envs = M5Stick-C, esp32cam, ESP32-2432S028R, ESP32_2432S028_2USB, NerminerV2, Lilygo-T-Embed, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S2-mini-wemos, ESP32-S3-mini-weact, ESP32-D0WD-V3-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
+default_envs = M5Stick-C, esp32cam, ESP32-2432S028R, ESP32_2432S028_2USB, NerminerV2, Lilygo-T-Embed, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-GEEK, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S2-mini-wemos, ESP32-S3-mini-weact, ESP32-D0WD-V3-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
 
 
 [env:M5Stick-C]
@@ -407,6 +407,27 @@ lib_deps =
 	arduino-libraries/NTPClient
 	https://github.com/FastLED/FastLED
 	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+
+;--------------------------------------------------------------------
+
+[env:NerminerV2-S3-GEEK]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+board_build.partitions = huge_app.csv
+build_flags = 
+    -DNERMINER_S3_GEEK
+    -DBOARD_HAS_PSRAM
+    -DARDUINO_USB_CDC_ON_BOOT
+    -DTFT_BACKLIGHT_ON=HIGH
+lib_deps = 
+	https://github.com/takkaO/OpenFontRender
+	bblanchon/ArduinoJson@^6.21.2
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
+	mathertel/OneButton @ ^2.0.3
+	arduino-libraries/NTPClient
+	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+
 
 ;--------------------------------------------------------------------
 
