--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,7 @@
 [platformio]
 globallib_dir = lib
 
-default_envs = M5Stick-C, esp32cam, ESP32-2432S028R, ESP32_2432S028_2USB, NerminerV2, Lilygo-T-Embed, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S3-mini-weact, ESP32-C3-devKitmv1, ESP32-C3-super-mini
-
+default_envs = han_m5stack, M5Stick-C, esp32cam, ESP32-2432S028R, NerminerV2, ESP32-devKitv1, NerminerV2-S3-DONGLE, NerminerV2-S3-AMOLED, NerminerV2-T-QT, NerdminerV2-T-Display_V1, ESP32-2432S028R, M5-StampS3, ESP32-S3-devKitv1, ESP32-S3-mini-wemos, ESP32-S3-mini-weact
 
 [env:M5Stick-C]
 platform = espressif32
@@ -41,7 +40,6 @@ lib_ignore =
 	SD
 	SD_MMC
 	rm67162
-	
 ;--------------------------------------------------------------------
 
 [env:ESP32-S3-mini-wemos]
@@ -72,7 +70,33 @@ lib_deps =
 	https://github.com/FastLED/FastLED
 lib_ignore =
 	TFT_eSPI
+;--------------------------------------------------------------------
 
+[env:han_m5stack]
+platform = espressif32
+board = m5stack-core-esp32
+framework = arduino
+monitor_filters =
+	esp32_exception_decoder
+	time
+	log2file
+;board_build.arduino.memory_type = qio_opi
+monitor_speed = 115200
+upload_speed = 115200
+# 2 x 4.5MB app, 6.875MB SPIFFS
+board_build.partitions = huge_app.csv
+build_flags =
+	-D HAN=1
+	-D M5STACK_BOARD=1
+	;-D DEBUG_MINING=1
+lib_deps =
+	bblanchon/ArduinoJson@^6.21.2
+	https://github.com/tzapu/WiFiManager.git#v2.0.16-rc.2
+	mathertel/OneButton @ ^2.0.3
+	arduino-libraries/NTPClient
+	m5stack@^0.4.6
+lib_ignore =
+	TFT_eSPI
 ;--------------------------------------------------------------------
 
 [env:ESP32-S3-mini-weact]
