fix : ignore hansolo on new boards

--- a/platformio.ini
+++ b/platformio.ini
@@ -198,6 +198,7 @@ lib_deps =
     arduino-libraries/NTPClient
 lib_ignore =
     TFT_eSPI
+    HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -261,6 +262,7 @@ lib_deps =
     arduino-libraries/NTPClient
 lib_ignore =
     TFT_eSPI
+    HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -499,6 +501,8 @@ lib_deps =
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
+lib_ignore =
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -565,7 +569,8 @@ lib_deps =
 	mathertel/OneButton @ ^2.0.3
 	arduino-libraries/NTPClient
 	;https://github.com/golden-guy/Arduino_wolfssl.git#v5.5.4
-
+lib_ignore =
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
@@ -753,6 +758,8 @@ lib_deps =
 	arduino-libraries/NTPClient
         bodmer/TFT_eSPI @ ^2.5.31
 	https://github.com/achillhasler/TFT_eTouch
+lib_ignore =
+	HANSOLOminerv2
 
 ;--------------------------------------------------------------------
 
