--- a/platformio.ini
+++ b/platformio.ini
@@ -198,6 +198,11 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+monitor_filters = 
+	esp32_exception_decoder
+	time	
+	colorize
+	;debug
 upload_speed = 921600
 ;build_type = debug
 board_build.partitions = huge_app.csv
@@ -227,6 +232,7 @@ build_flags =
 	-DSPI_FREQUENCY=55000000
 	-DSPI_READ_FREQUENCY=20000000
 	-DSPI_TOUCH_FREQUENCY=2500000
+	
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
