--- a/bin/flash_download_tool_3.9.3/configure/esp8266/hspi_download.conf
+++ b/bin/flash_download_tool_3.9.3/configure/esp8266/hspi_download.conf
@@ -3,8 +3,8 @@ efuse_mode = 1
 efuse_err_halt = 1
 
 [DOWNLOAD PATH]
-file_sel0 = 0
-file_path0 = 
+file_sel0 = 1
+file_path0 = C:\Users\xdonn\OneDrive\Documents\GitHub\NerdMiner_v2\bin\bin LILYGO TDisplay S3\0x10000_firmware.bin
 file_offset0 = 
 file_sel1 = 0
 file_path1 = 
@@ -45,12 +45,12 @@ file_offset12 =
 file_sel13 = 0
 file_path13 = 
 file_offset13 = 
-default_path = C:\Users\xdonn\OneDrive\Documents\GitHub\NerdMiner_v2\bin\flash_download_tool_3.9.3
+default_path = C:\Users\xdonn\OneDrive\Documents\GitHub\NerdMiner_v2\bin\bin LILYGO TDisplay S3
 
 [FLASH_CRYSTAL]
 spicfgdis = 1
-spispeed = 0
-spimode = 0
+spispeed = 3
+spimode = 4
 
 [MAC SAVE]
 mac_save_enable = False
