--- a/bin/flash_download_tool_3.9.3/configure/esp8266/spi_download.conf
+++ b/bin/flash_download_tool_3.9.3/configure/esp8266/spi_download.conf
@@ -3,11 +3,11 @@ efuse_mode = 1
 efuse_err_halt = 1
 
 [DOWNLOAD PATH]
-file_sel0 = 0
-file_path0 = 
+file_sel0 = 1
+file_path0 = C:\Users\xdonn\OneDrive\Documents\GitHub\NerdMiner_v2\bin\bin LILYGO TDisplay S3\0x10000_firmware.bin
 file_offset0 = 
-file_sel1 = 0
-file_path1 = 
+file_sel1 = 1
+file_path1 = C:\Users\xdonn\OneDrive\Documents\GitHub\NerdMiner_v2\bin\bin LILYGO TDisplay S3\0x10000_firmware.bin
 file_offset1 = 
 file_sel2 = 0
 file_path2 = 
@@ -45,7 +45,7 @@ file_offset12 =
 file_sel13 = 0
 file_path13 = 
 file_offset13 = 
-default_path = C:\Users\xdonn\OneDrive\Documents\GitHub\NerdMiner_v2\bin\flash_download_tool_3.9.3
+default_path = C:\Users\xdonn\OneDrive\Documents\GitHub\NerdMiner_v2\bin\bin LILYGO TDisplay S3
 
 [FLASH_CRYSTAL]
 spicfgdis = 1
@@ -84,7 +84,7 @@ flash_write_size = 1024
 
 [DOWNLOAD]
 autostart1 = 0
-com_port1 = 
+com_port1 = COM3
 baudrate1 = 0
 checkmac1 = 1
 
