feat : add support to esp32 s3 geek using sdcard fixes #405

--- a/platformio.ini
+++ b/platformio.ini
@@ -562,6 +562,11 @@ build_flags =
     -DBOARD_HAS_PSRAM
     -DARDUINO_USB_CDC_ON_BOOT
     -DTFT_BACKLIGHT_ON=HIGH
+    -DSDSPI_CLK=36
+    -DSDSPI_MOSI=35
+    -DSDSPI_MISO=37
+    -DSDSPI_CS=34
+    -DSD_ID=HSPI
 lib_deps = 
 	https://github.com/takkaO/OpenFontRender
 	bblanchon/ArduinoJson@^6.21.2
